<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/activeOrders"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/title_orders"/>
        <item
            android:id="@+id/historyOrders"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/title_history_orders"/>
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/title_faq"/>
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
